# dropbox-witchcraft

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
examples/pickbrain/: claude_code.rs  codex.rs  main.rs  pi.rs
extensions/pickbrain-pi/: index.ts
skills/pickbrain-pi/: SKILL.md
src/: lib.rs  python.rs
tests/: test_witchcraft.py
